# boxie

./: .gitignore  MANIFEST  README.md  README.rst  boxie  chuy.json  pyproject.toml  setup.py  test.py
.github/workflows/: codeql-analysis.yml  publish.yml  pylint.yml
boxie/: __init__.py  __main__.py  core.py  ui.py
