[tool.poetry]
name = "boxie"
version = "1.2.0"
description = "Like Figlet but puts the text in a box"
authors = ["Eliaz Bobadilla <eliaz.bobadilladev@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/UltiRequiem/boxie"
repository = "https://github.com/UltiRequiem/boxie"
keywords = ["commands", "utilities", "cli"]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
