[tool.poetry]
name = "boxie"
version = "1.2.0"
description = "Like Figlet but puts the text in a box"
authors = ["Eliaz Bobadilla <eliaz.bobadilladev@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/UltiRequiem/boxie"
repository = "https://github.com/UltiRequiem/boxie"
keywords = ["commands", "utilities", "cli"]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.dev-dependencies]
black = "^21.7b0"
pylint = "^2.9.6"


[tool.poetry.scripts]
boxie = 'boxie:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
